minor fixes in ipynb

--- a/src/main_notebook.ipynb
+++ b/src/main_notebook.ipynb
@@ -62,7 +62,7 @@
     "\n",
     "A convolutional layer is a fundamental building block in Convolutional Neural Networks (CNNs) used primarily for processing grid-like data such as images. It applies convolution operations to detect local features in the input.\n",
     "\n",
-    "Although it is called a convolutional layer, the PyTorch implementation of conv2d does not actually perform a convolution in the mathematical sense. Instead, it performs a cross-correlation operation, where the kernel is not flipped. This distinction is important to note, but for most practical purposes, including this project, the difference between convolution and cross-correlation is negligible.\n",
+    "Although it is called a convolutional layer, the PyTorch implementation of conv2d does not actually perform a convolution in the mathematical sense. Instead, it performs a cross-correlation operation, where the kernel is not flipped. This distinction is important to note, but for most deep learning projects including this one, cross-correlation is perfectly fine as the weights will automatically adjust during training.\n",
     "\n",
     "For more details, refer to [P0](https://rbe549.github.io/rbe474x/fall2024a/proj/p0/).\n"
    ]
@@ -800,8 +800,8 @@
     "- part 4 : 10\n",
     "- part 5 : 10\n",
     "\n",
-    "- For RBE474X: part1 + part2 + part3 = 100% of the grade (80/80).\n",
-    "- For RBE595-A01-SP: You are expected to implement part1-part5 for getting full credits (100/100).\n",
+    "For RBE474X: part1 + part2 + part3 = 100% of the grade (80/80).\n",
+    "For RBE595-A01-SP: You are expected to implement part1-part5 for getting full credits (100/100).\n",
     "\n",
     "Your code will be evaluated with test.py. Please run it and ensure that the tests pass before submitting. Instructions are in software setup section.\n",
     "\n",
