resources added to p1 notebook

--- a/src/main_notebook.ipynb
+++ b/src/main_notebook.ipynb
@@ -16,6 +16,7 @@
     "4. Implementation\n",
     "5. Grading Rubric\n",
     "6. Report guidelines\n",
+    "7. Useful Resources\n",
     "\n",
     "## 1. Introduction\n",
     "\n",
@@ -529,7 +530,21 @@
     "\n",
     "1. Training loss curve (loss vs epoch count)\n",
     "2. Confusion Matrix for validation set (val_step)\n",
-    "3. Accuracy comparison between MLP, CNN (torch layers) and CNN (custom_layers)\n"
+    "3. Accuracy comparison between MLP, CNN (torch layers) and CNN (custom_layers)\n",
+    "\n",
+    "## 7. Useful Resources\n",
+    "\n",
+    "Here are some YouTube videos that can help you with project 1.\n",
+    "\n",
+    "1. [Back Propagation from scratch](https://www.youtube.com/watch?v=4shguqlkTDM)\n",
+    "2. [Back Propagation](https://www.youtube.com/watch?v=YOlOLxrMUOw)\n",
+    "3. [Back Propagation in CNN](https://www.youtube.com/watch?v=z9hJzduHToc)\n",
+    "\n",
+    "Additionally, you may find [torch einsum](https://pytorch.org/docs/stable/generated/torch.einsum.html) function really helpful for multidimensional tensor-tensor products. It is a physics concept that got used/abused by programmers.\n",
+    "\n",
+    "[Index notation and torch einsum](https://www.youtube.com/watch?v=IvgV6QcsC64)\n",
+    "\n",
+    "\n"
    ]
   }
  ],
